byte-code-compiler/test_files/typing/bad/testfile-undef_field-1.psc
struct S {
  int_32 a;
};

int_32 main() {
  struct S* p;
  p->b = 1;
}

